
- Issue #6698: IDLE now opens just an editor window when configured to do so.

- Issue #8900: Using keyboard shortcuts in IDLE to open a file no longer
  raises an exception.

- Issue #6649: Fixed missing exit status in IDLE. Patch by Guilherme Polo.

Tests
-----

- Issue #12820: add tests for the xml.dom.minicompat module.
  Patch by John Chandler and Phil Connell.

- Issue #17789: test_random now works with unittest test discovery.
  Patch by Zachary Ware.

- Issue #17779: test_osx_env now works with unittest test discovery.
  Patch by Zachary Ware.

- Issue #17766: test_iterlen now works with unittest test discovery.
  Patch by Zachary Ware.

- Issue #17690: test_time now works with unittest test discovery.
  Patch by Zachary Ware.

- Issue #17692: test_sqlite now works with unittest test discovery.
  Patch by Zachary Ware.

Documentation
-------------

- Issue #15940: Specify effect of locale on time functions.

- Issue #6696: add documentation for the Profile objects, and improve
  profile/cProfile docs.  Patch by Tom Pinckney.


What's New in Python 3.3.1?
===========================

*Release date: 07-Apr-2013*

Build
-----

- Issue #17550: Fix the --enable-profiling configure switch.

IDLE
-------

- Issue #17625: In IDLE, close the replace dialog after it is used.


What's New in Python 3.3.1 release candidate 1?
===============================================

*Release date: 24-Mar-2013*

Core and Builtins
-----------------

- Issue #17328: Fix possible refleak in dict.setdefault.

- Issue #17223: Fix PyUnicode_FromUnicode() for string of 1 character outside
  the range U+0000-U+10ffff.

- Issue #1692335: Move initial args assignment to
  BaseException.__new__ to help pickling of naive subclasses.

- Issue #17275: Corrected class name in init error messages of the C version of
  BufferedWriter and BufferedRandom.

- Issue #7963: Fixed misleading error message that issued when object is
  called without arguments.
